
[package]
name = "pagerank"
version = "0.1.0"
authors = ["Frank McSherry <fmcsherry@me.com>"]


[dependencies.timely]
git = "https://github.com/frankmcsherry/timely-dataflow.git"
#path="../timely-dataflow"

[dependencies]
getopts="*"
time = "*"
memmap="*"
rand="*"
byteorder="*"
timely_communication="*"
#timely="*"

[dev-dependencies]
tempdir = "^0.3"

[profile.release]
opt-level = 3
debug = true
rpath = false
lto = false
debug-assertions = false
